<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">


        <Switch
            android:id="@+id/switch_accident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:scrollbarSize="20sp"
            android:switchPadding="30dp"
            android:text="@string/switch_accident"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Switch
            android:id="@+id/switch_precursor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:scrollbarSize="20sp"
            android:switchPadding="30dp"
            android:text="@string/switch_precursor"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_accident" />

        <Switch
            android:id="@+id/switch_location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:scrollbarSize="20sp"
            android:switchPadding="30dp"
            android:text="@string/switch_location"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_precursor" />

        <Switch
            android:id="@+id/switch_accident_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:scrollbarSize="20sp"
            android:switchPadding="30dp"
            android:text="@string/switch_accident_alarm"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_location" />

        <Switch
            android:id="@+id/switch_portent_alarm"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="26dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="26dp"
            android:scrollbarSize="20sp"
            android:switchPadding="30dp"
            android:text="@string/switch_portent_alarm"
            android:textSize="20sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="0.545"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_accident_alarm" />

        <Button
            android:id="@+id/button_start"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_start"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button_reset"
            style="@style/AppTheme.Button"
            android:layout_width="wrap_content"
            android:layout_height="47dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="8dp"
            android:text="@string/button_reset"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.488"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toBottomOf="@+id/button_start" />

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="205dp" />

        <!--<TextView-->
        <!--android:id="@+id/textview_test"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="92dp"-->
        <!--android:layout_marginTop="288dp"-->
        <!--android:text="1234"-->
        <!--android:textSize="30sp"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

        <!--<Button-->
        <!--android:id="@+id/button_billfragment_logout"-->
        <!--style="@style/AppTheme.Button"-->
        <!--android:layout_width="71dp"-->
        <!--android:layout_height="35dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:text="@string/button_billboard_logout"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintTop_toTopOf="parent" />-->

        <TextView
            android:id="@+id/text_accumulation_title"
            android:layout_width="wrap_content"
            android:layout_height="23dp"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="108dp"
            android:text="@string/text_accumulation_title"
            android:textSize="18sp"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/switch_portent_alarm" />

        <TextView
            android:id="@+id/text_accumulation_accident"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="36dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_accumulation_accident"
            android:textSize="18sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_accumulation_title" />

        <TextView
            android:id="@+id/text_accumulation_portent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="16dp"
            android:text="@string/text_accumulation_portent"
            android:textSize="18sp"
            app:layout_constraintStart_toEndOf="@+id/text_accumulation_accident"
            app:layout_constraintTop_toBottomOf="@+id/text_accumulation_title" />

        <!--<EditText-->
            <!--android:id="@+id/editText_billboardfragment_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/textView_billboardfragment_name" />-->

        <!--<EditText-->
            <!--android:id="@+id/editText_billboardfragment_site"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="16dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:ems="10"-->
            <!--android:inputType="textPersonName"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/textView_billboardfragment_site" />-->

        <!--<Button-->
            <!--android:id="@+id/button_billboardfragment_save"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="43dp"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:text="儲存"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/editText_billboardfragment_site" />-->

        <!--<TextView-->
            <!--android:id="@+id/textView_billboardfragment_name"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="32dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:text="姓名或代號"-->
            <!--android:textSize="20sp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/text_accumulation_portent" />-->

        <!--<TextView-->
            <!--android:id="@+id/textView_billboardfragment_site"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:layout_marginStart="8dp"-->
            <!--android:layout_marginTop="24dp"-->
            <!--android:layout_marginEnd="8dp"-->
            <!--android:text="工地代號"-->
            <!--android:textSize="20sp"-->
            <!--app:layout_constraintEnd_toEndOf="parent"-->
            <!--app:layout_constraintStart_toStartOf="parent"-->
            <!--app:layout_constraintTop_toBottomOf="@+id/editText_billboardfragment_name" />-->

        <com.github.mikephil.charting.charts.BarChart
            android:id="@+id/barChart"
            android:layout_width="match_parent"
            android:layout_height="180dp"
            android:layout_marginTop="32dp"

            app:layout_constraintTop_toBottomOf="@+id/text_accumulation_accident" />

        <!--<Button-->
        <!--android:id="@+id/button_test"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:layout_marginStart="8dp"-->
        <!--android:layout_marginTop="8dp"-->
        <!--android:layout_marginEnd="8dp"-->
        <!--android:text="test"-->
        <!--app:layout_constraintEnd_toEndOf="parent"-->
        <!--app:layout_constraintHorizontal_bias="0.501"-->
        <!--app:layout_constraintStart_toStartOf="parent"-->
        <!--app:layout_constraintTop_toBottomOf="@+id/button_billboardfragment_save" />-->

</android.support.constraint.ConstraintLayout>

</ScrollView>